--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "server": "json-server --watch server.json --port 3333",
     "dev": "webpack serve",
-    "build": "webpack"
+    "build": "webpack",
+    "docs:deploy": "./node_modules/.bin/gh-pages -d dist"
   },
   "dependencies": {
     "json-server": "^1.0.0-beta.2"
@@ -17,6 +18,7 @@
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.94.0",
